--- a/app/templates/agendarCitas.html
+++ b/app/templates/agendarCitas.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Dashboard paciente</title>
+  <title>Agendar citas</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
@@ -92,17 +92,37 @@
         </h1>
         <ol class="breadcrumb text-left">
           <li class="active "><a href="#"><i class="fa fa-home"></i> Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Agendar Citas</li>
          
         </ol>
       </section>
 
       <!-- Main content -->
       <section class="content">
-        <div class="callout callout-info">
-          <h4 class="text-center">Hola nombrePaciente, Bienvenido!</h4>
-
+        <div class="card-body">
+          <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+            <option selected>Especialidad</option>
+            <option value="1">Medico general</option>
+            <option value="2">Psicologia</option>
+            <option value="3">Pediatria</option>
+          </select>
+          
          
         </div>
+
+        <table class="table table-condensed">
+            <tr>
+              <td class="active col-md-4">Doctor</td>
+              <td class="success col-md-4">Especialidad</td>
+              <td class="warning col-md-4">Disponibilidad</td>
+            </tr>
+
+            <tr>
+              <td>Juan Lopez</td>
+              <td>Medicina general</td>
+              <td>Lunes a viernes 6:00am - 3:00pm</td>
+            </tr>
+        </table>
   
         <!-- /.box -->
       </section>
