--- a/app/templates/dashboardMedico.html
+++ b/app/templates/dashboardMedico.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Dashboard paciente</title>
+  <title>Dashboard Medico</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
@@ -37,7 +37,7 @@
     <nav class="navbar navbar-static-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="#" class="navbar-brand"><b>Dashboard</b> Pacientes</a>
+          <a href="#" class="navbar-brand"><b>Dashboard</b> Medico</a>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
             <i class="fa fa-bars"></i>
           </button>
@@ -46,8 +46,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#">Agendar Citas </a></li>
-            <li><a href="#">Historia Clinica</a></li>
+            <li><a href="#">Citas programadas </a></li>
+            <li><a href="#">Detalle pacientes</a></li>
           
           </ul>
        
@@ -62,7 +62,7 @@
             <li class="dropdown user user-menu">
               <!-- Menu Toggle Button -->
              <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">pacienteNombre<span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">MedicoNombre<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="#">Perfil</a></li>
                 <li><a href="#">Configuracion</a></li>
@@ -99,7 +99,7 @@
       <!-- Main content -->
       <section class="content">
         <div class="callout callout-info">
-          <h4 class="text-center">Hola nombrePaciente, Bienvenido!</h4>
+          <h4 class="text-center">Hola nombreMedico, Bienvenido!</h4>
 
          
         </div>
