--- a/app/templates/verListadoUsuarios.html
+++ b/app/templates/verListadoUsuarios.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Dashboard paciente</title>
+  <title>Detalle Admin</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
@@ -37,7 +37,7 @@
     <nav class="navbar navbar-static-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="#" class="navbar-brand"><b>Dashboard</b> Pacientes</a>
+          <a href="#" class="navbar-brand"><b>Dashboard</b> Admin</a>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
             <i class="fa fa-bars"></i>
           </button>
@@ -46,8 +46,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#">Agendar Citas </a></li>
-            <li><a href="#">Historia Clinica</a></li>
+            <li><a href="#">Usuarios</a></li>
+            <li><a href="#">Citas</a></li>
           
           </ul>
        
@@ -62,7 +62,7 @@
             <li class="dropdown user user-menu">
               <!-- Menu Toggle Button -->
              <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">pacienteNombre<span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">AdminNombre<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="#">Perfil</a></li>
                 <li><a href="#">Configuracion</a></li>
@@ -92,17 +92,46 @@
         </h1>
         <ol class="breadcrumb text-left">
           <li class="active "><a href="#"><i class="fa fa-home"></i> Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Listado Usuarios</li>
          
         </ol>
       </section>
+       <!-- //TODO: mejorar presentacion de botones. -->
+      <div align="center">
+        <button type="button" class="btn btn-info">Usuarios</button>
+        <button type="button" class="btn btn-info">Pacientes</button>
+        <button type="button" class="btn btn-info">Medicos</button>     
+      </div>
 
       <!-- Main content -->
-      <section class="content">
-        <div class="callout callout-info">
-          <h4 class="text-center">Hola nombrePaciente, Bienvenido!</h4>
 
-         
-        </div>
+        <table class="table table-condensed">
+            <tr>
+              <td class="warning col-md-2">Nombre</td>
+              <td class="warning col-md-2">Edad</td>
+              <td class="warning col-md-2">Direccion</td>
+              <td class="warning col-md-2">Telefono</td>
+              <td class="warning col-md-2">Alergias</td>
+              <td class="warning col-md-2">Informacion medica</td>
+            </tr>
+
+            <tr>
+              <td>Gloria Ortiz</td>
+              <td>34</td>
+              <td>Cra falsa 123</td>
+              <td>3203409522</td>
+              <td>Ninguna</td>
+              <td>Paciente recien ingresada</td>
+            </tr>
+            <tr>
+              <td>Andrea Castrillon</td>
+              <td>27</td>
+              <td>Cra falsa 345</td>
+              <td>3153465464</td>
+              <td>Ninguna</td>
+              <td>Paciente recien ingresada</td>
+            </tr>
+        </table>
   
         <!-- /.box -->
       </section>
